# 128.samuel.ovh

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/server/: Cargo.toml
apps/server/src/: main.rs  network.rs  protocol.rs  simulation.rs  state.rs
apps/web/: index.html  package.json  tsconfig.json
apps/web/public/assets/: README.md
apps/web/src/: main.ts  styles.css  vite-env.d.ts
apps/web/src/app/: index.ts
apps/web/src/input/: mouse.ts
apps/web/src/network/: client.ts
apps/web/src/rendering/: create-renderer.ts  player-cursors.ts  world-viewport.ts
tooling/: README.md
tooling/typescript/: base.json
